
nobase_include_HEADERS = \
mae/mstr.hpp \
mae/movement_controller.hpp \
mae/mos.hpp \
mae/e_joint.hpp \
mae/i_kp_detector.hpp \
mae/i_movement_detector.hpp \
mae/i_sequence_recognizer.hpp \
mae/e_kinect_joint.hpp \
mae/general_pose.hpp \
mae/kp_movement_detector.hpp \
mae/mbool.hpp \
mae/general_skeleton.hpp \
mae/i_recognition_listener.hpp \
mae/hierarchy_element.hpp \
mae/i_sequence_listener.hpp \
mae/general_enriched_pose.hpp \
mae/hierarchy.hpp \
mae/i_skeleton_merger.hpp \
mae/mae.hpp \
mae/general_joint.hpp \
mae/kp_detector.hpp \
mae/bone.hpp \
mae/i_pose_listener.hpp \
mae/ini_reader.hpp \
mae/dummy_pose_listener.hpp \
mae/i_skeleton_controller.hpp \
mae/indexer_fix.hpp \
mae/math/vec3d.hpp \
mae/math/basis.hpp \
mae/math/math.hpp \
mae/fl/msr_data_controller.hpp \
mae/fl/skeleton_merger.hpp \
mae/fl/fl_movement_controller.hpp \
mae/fl/fl.hpp \
mae/fl/msr_spec.hpp \
mae/fl/msr_data.hpp \
mae/fl/e_fl_direction.hpp \
mae/fl/fl_skeleton_controller.hpp \
mae/fl/bvh_controller.hpp \
mae/fl/angular_skeleton_controller.hpp \
mae/fl/fl_pose_detector.hpp \
mae/fl/bvh_spec.hpp \
mae/fl/e_fl_joint.hpp \
mae/fl/laban/i_decision_maker.hpp \
mae/fl/laban/laban_sequence_recognizer.hpp \
mae/fl/laban/rewriting_rules_reader.hpp \
mae/fl/laban/decision_node.hpp \
mae/fl/laban/e_relationship_type.hpp \
mae/fl/laban/rewriting_decision_maker.hpp \
mae/fl/laban/decision_maker.hpp \
mae/fl/laban/decision_forest.hpp \
mae/fl/laban/room_direction.hpp \
mae/fl/laban/decision_tree.hpp \
mae/fl/laban/laban_sequence_generator.hpp \
mae/fl/laban/column_definition.hpp \
mae/fl/laban/relationship_bow.hpp \
mae/fl/laban/i_movement.hpp \
mae/fl/laban/laban.hpp \
mae/fl/laban/mv/e_level.hpp \
mae/fl/laban/mv/i_symbol.hpp \
mae/fl/laban/mv/i_degree_sign.hpp \
mae/fl/laban/mv/space_measurement.hpp \
mae/fl/laban/mv/e_dynamic.hpp \
mae/fl/laban/mv/cancellation_symbol.hpp \
mae/fl/laban/mv/e_turn_direction.hpp \
mae/fl/laban/mv/dynamic_sign.hpp \
mae/fl/laban/mv/e_cancel.hpp \
mae/fl/laban/mv/accent_sign.hpp \
mae/fl/laban/mv/pin.hpp \
mae/fl/laban/mv/relationship_endpoint.hpp \
mae/fl/laban/mv/i_dynamics_sign.hpp \
mae/fl/laban/mv/space_symbol.hpp \
mae/fl/laban/mv/turn_symbol.hpp \
mae/fl/laban/mv/e_space_direction.hpp \
mae/fl/laban/mv/vibration_symbol.hpp \
mae/fl/laban/mv/e_direction.hpp \
mae/fl/laban/mv/mv.hpp \
mae/fl/laban/mv/e_space.hpp \
mae/fl/laban/mv/e_contact_hook.hpp \
mae/fl/laban/mv/direction_symbol.hpp \
mae/fl/laban/rewriting_forest.hpp \
mae/fl/laban/laban_sequence_reader.hpp \
mae/fl/laban/ps/custom_limb.hpp \
mae/fl/laban/ps/e_joint.hpp \
mae/fl/laban/ps/body_part.hpp \
mae/fl/laban/ps/i_pre_sign.hpp \
mae/fl/laban/ps/e_digit.hpp \
mae/fl/laban/ps/joint_part.hpp \
mae/fl/laban/ps/digit_part.hpp \
mae/fl/laban/ps/e_limb_side.hpp \
mae/fl/laban/ps/ps.hpp \
mae/fl/laban/ps/surface_part.hpp \
mae/fl/laban/ps/default_limb.hpp \
mae/fl/laban/ps/area_part.hpp \
mae/fl/laban/ps/i_limb.hpp \
mae/fl/laban/ps/e_area.hpp \
mae/fl/laban/ps/i_endpoint.hpp \
mae/fl/laban/ps/e_limb.hpp \
mae/fl/laban/ps/e_side.hpp \
mae/fl/laban/ps/i_part.hpp \
mae/fl/laban/ps/prop.hpp \
mae/fl/laban/e_path_type.hpp \
mae/fl/laban/movement.hpp \
mae/fl/laban/path.hpp \
mae/fl/laban/e_time_unit.hpp \
mae/fl/laban/decision_value.hpp \
mae/fl/laban/laban_sequence.hpp \
mae/fl/angular_skeleton.hpp \
mae/fl/bvh_data.hpp \
mae/fl/fl_skeleton.hpp \
mae/fl/angular_joint.hpp \
mae/i_pose_detector.hpp \
mae/e_bone.hpp \
mae/i_sequence_generator.hpp
