
nobase_include_HEADERS = \
mae/demo/mae_res_img.hpp \
mae/demo/sdl_window_item.hpp \
mae/demo/demo.hpp \
mae/demo/mae_res.hpp \
mae/demo/sdl_window.hpp \
mae/demo/indexer_fix.hpp \
mae/demo/fl/res/laban_direction_img8.h \
mae/demo/fl/res/laban_direction_img29.h \
mae/demo/fl/res/laban_direction5.png.h \
mae/demo/fl/res/laban_direction26.h \
mae/demo/fl/res/laban_direction14.h \
mae/demo/fl/res/laban_direction22.png.h \
mae/demo/fl/res/laban_direction21.png.h \
mae/demo/fl/res/res.hpp \
mae/demo/fl/res/laban_direction5.h \
mae/demo/fl/res/laban_direction4.h \
mae/demo/fl/res/laban_direction_img5.h \
mae/demo/fl/res/laban_direction_img9.h \
mae/demo/fl/res/laban_direction17.h \
mae/demo/fl/res/laban_direction9.png.h \
mae/demo/fl/res/laban_direction_img26.h \
mae/demo/fl/res/droidsans.ttf.h \
mae/demo/fl/res/laban_direction_img17.h \
mae/demo/fl/res/laban_direction_img33.h \
mae/demo/fl/res/laban_direction_img7.h \
mae/demo/fl/res/laban_direction4.png.h \
mae/demo/fl/res/laban_direction7.png.h \
mae/demo/fl/res/laban_direction15.h \
mae/demo/fl/res/laban_direction28.png.h \
mae/demo/fl/res/laban_direction20.png.h \
mae/demo/fl/res/laban_direction28.h \
mae/demo/fl/res/laban_direction30.png.h \
mae/demo/fl/res/laban_direction26.png.h \
mae/demo/fl/res/laban_direction33.h \
mae/demo/fl/res/laban_direction_img12.h \
mae/demo/fl/res/laban_direction_img30.h \
mae/demo/fl/res/laban_direction13.h \
mae/demo/fl/res/laban_direction32.png.h \
mae/demo/fl/res/laban_direction16.h \
mae/demo/fl/res/laban_direction_img31.h \
mae/demo/fl/res/laban_direction11.h \
mae/demo/fl/res/laban_direction_img19.h \
mae/demo/fl/res/laban_direction_img24.h \
mae/demo/fl/res/laban_direction_img28.h \
mae/demo/fl/res/laban_direction_img13.h \
mae/demo/fl/res/laban_direction19.png.h \
mae/demo/fl/res/directions_handler.hpp \
mae/demo/fl/res/laban_direction17.png.h \
mae/demo/fl/res/laban_direction27.png.h \
mae/demo/fl/res/laban_direction9.h \
mae/demo/fl/res/laban_direction33.png.h \
mae/demo/fl/res/laban_direction2.h \
mae/demo/fl/res/laban_direction3.png.h \
mae/demo/fl/res/laban_direction_img14.h \
mae/demo/fl/res/laban_direction31.h \
mae/demo/fl/res/laban_direction_img4.h \
mae/demo/fl/res/laban_direction_img32.h \
mae/demo/fl/res/laban_direction24.h \
mae/demo/fl/res/laban_direction_img25.h \
mae/demo/fl/res/laban_direction23.h \
mae/demo/fl/res/laban_direction_img3.h \
mae/demo/fl/res/laban_direction21.h \
mae/demo/fl/res/laban_direction11.png.h \
mae/demo/fl/res/laban_direction12.png.h \
mae/demo/fl/res/laban_direction22.h \
mae/demo/fl/res/laban_direction23.png.h \
mae/demo/fl/res/laban_direction16.png.h \
mae/demo/fl/res/laban_direction15.png.h \
mae/demo/fl/res/laban_direction19.h \
mae/demo/fl/res/laban_direction8.h \
mae/demo/fl/res/laban_direction14.png.h \
mae/demo/fl/res/laban_direction10.png.h \
mae/demo/fl/res/laban_direction_img23.h \
mae/demo/fl/res/laban_direction_img15.h \
mae/demo/fl/res/laban_direction24.png.h \
mae/demo/fl/res/laban_direction_img6.h \
mae/demo/fl/res/laban_direction31.png.h \
mae/demo/fl/res/laban_direction6.h \
mae/demo/fl/res/laban_direction_img16.h \
mae/demo/fl/res/laban_direction_img10.h \
mae/demo/fl/res/laban_direction30.h \
mae/demo/fl/res/laban_direction_img22.h \
mae/demo/fl/res/laban_direction_img21.h \
mae/demo/fl/res/laban_direction_img2.h \
mae/demo/fl/res/laban_direction18.png.h \
mae/demo/fl/res/laban_direction12.h \
mae/demo/fl/res/laban_direction10.h \
mae/demo/fl/res/laban_direction3.h \
mae/demo/fl/res/laban_direction_img11.h \
mae/demo/fl/res/laban_direction13.png.h \
mae/demo/fl/res/laban_direction1.png.h \
mae/demo/fl/res/laban_direction25.h \
mae/demo/fl/res/laban_direction25.png.h \
mae/demo/fl/res/laban_direction6.png.h \
mae/demo/fl/res/laban_direction32.h \
mae/demo/fl/res/laban_direction2.png.h \
mae/demo/fl/res/laban_direction7.h \
mae/demo/fl/res/laban_direction29.png.h \
mae/demo/fl/res/laban_direction18.h \
mae/demo/fl/res/laban_direction1.h \
mae/demo/fl/res/laban_direction_img1.h \
mae/demo/fl/res/laban_direction27.h \
mae/demo/fl/res/laban_direction_img27.h \
mae/demo/fl/res/laban_direction8.png.h \
mae/demo/fl/res/laban_direction29.h \
mae/demo/fl/res/laban_direction20.h \
mae/demo/fl/res/laban_direction_img18.h \
mae/demo/fl/res/laban_direction_img20.h \
mae/demo/fl/res/background0.png.h \
mae/demo/fl/sequence_window.hpp \
mae/demo/fl/fl.hpp \
mae/demo/fl/recorder_window.hpp \
mae/demo/fl/laban_visualizer.hpp \
mae/demo/fl/pose_window.hpp \
mae/demo/fl/recognition_window.hpp
