
nobase_include_HEADERS = \
mae/eventing/client.hpp \
mae/eventing/server.hpp \
mae/eventing/i_sequence_serializer.hpp \
mae/eventing/eventing.hpp \
mae/eventing/i_registration_manager.hpp \
mae/eventing/indexer_fix.hpp \
mae/eventing/cs_base.hpp \
mae/eventing/fl/fl.hpp \
mae/eventing/fl/laban_serializer.hpp \
mae/eventing/fl/fl_server.hpp \
mae/eventing/fl/fl_client.hpp \
mae/eventing/mxml.hpp
